--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example to set all to blue color"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,14 +38,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "blue_colour = ControlData(\n",
     "    switchable=True,\n",
-    "    dimmable=100,\n",
+    "    dimmable=50,\n",
+    "    color_rgb=ColorRGBData(r=0, g=10, b=255)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blue_colour = ControlData(\n",
+    "    switchable=True,\n",
+    "    dimmable=50,\n",
     "    color_rgb=ColorRGBData(r=0, g=0, b=255)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(18):\n",
+    "    control_device_device_id_control_post.sync(field_id= i, client=client,body=blue_colour)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example to set them to cool blue color.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dali_client.api.control import control_device_device_id_control_post\n",
+    "from dali_client.models.control_data import ControlData\n",
+    "from dali_client.models.color_xy_with_fade_data import ColorXYWithFadeData\n",
+    "from dali_client.models.color_xy_data import ColorXYData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cool_colour =  ControlData(\n",
+    "    switchable=True,\n",
+    "    dimmable=50,\n",
+    "    color_xy_with_fade=ColorXYWithFadeData(fade_time=1, color=ColorXYData(x=0.432, y=0.25))\n",
     ")"
    ]
   },
@@ -49,7 +112,83 @@
    "outputs": [],
    "source": [
     "for i in range(18):\n",
-    "    control_device_device_id_control_post.sync(field_id= i, client=client,body=blue_colour)"
+    "    control_device_device_id_control_post.sync(field_id= i, client=client,body=cool_colour)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All one colour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dali_client.api.control import control_device_device_id_control_post\n",
+    "from dali_client.models.control_data import ControlData\n",
+    "from dali_client.models.color_rgb_data import ColorRGBData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(18):\n",
+    "    control_device_device_id_control_post.sync(\n",
+    "        field_id=i,\n",
+    "        client=client,\n",
+    "        body=ControlData(\n",
+    "            switchable=True, dimmable=50, color_rgb=ColorRGBData(r=0, g=255, b=0)\n",
+    "        ),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All one colour with fade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dali_client.api.control import control_device_device_id_control_post\n",
+    "from dali_client.models.control_data import ControlData\n",
+    "from dali_client.models.color_rgb_with_fade_data import ColorRGBWithFadeData\n",
+    "from dali_client.models.color_rgb_data import ColorRGBData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(18):\n",
+    "    control_device_device_id_control_post.sync(\n",
+    "        field_id=i,\n",
+    "        client=client,\n",
+    "        body=ControlData(\n",
+    "            switchable=True, dimmable=50, color_rgb_with_fade=ColorRGBWithFadeData(fade_time=0.2,color=ColorRGBData(r=0,g=0,b=238))\n",
+    "        ),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random colours"
    ]
   },
   {
@@ -57,7 +196,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from dali_client.api.control import control_device_device_id_control_post\n",
+    "from dali_client.models.control_data import ControlData\n",
+    "from dali_client.models.color_rgb_data import ColorRGBData\n",
+    "from random import random as ra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(18):\n",
+    "    control_device_device_id_control_post.sync(\n",
+    "        field_id=i,\n",
+    "        client=client,\n",
+    "        body=ControlData(\n",
+    "            switchable=True, dimmable=50, color_rgb=ColorRGBData(r=255*ra(), g=255*ra(), b=255*ra())\n",
+    "        ),\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
