use only fractions for colours

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "blue_colour = ControlData(\n",
     "    switchable=True,\n",
     "    dimmable=50,\n",
-    "    color_rgb=ColorRGBData(r=0, g=10, b=255)\n",
+    "    color_rgb=ColorRGBData(r=0, g=0.2, b=1)\n",
     ")"
    ]
   },
@@ -58,7 +58,7 @@
     "blue_colour = ControlData(\n",
     "    switchable=True,\n",
     "    dimmable=50,\n",
-    "    color_rgb=ColorRGBData(r=0, g=0, b=255)\n",
+    "    color_rgb=ColorRGBData(r=0, g=0, b=1)\n",
     ")"
    ]
   },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(18):\n",
+    "for i in range(10):\n",
     "    control_device_device_id_control_post.sync(field_id= i, client=client,body=cool_colour)"
    ]
   },
@@ -144,7 +144,7 @@
     "        field_id=i,\n",
     "        client=client,\n",
     "        body=ControlData(\n",
-    "            switchable=True, dimmable=50, color_rgb=ColorRGBData(r=0, g=255, b=0)\n",
+    "            switchable=True, dimmable=50, color_rgb=ColorRGBData(r=0, g=1, b=0)\n",
     "        ),\n",
     "    )"
    ]
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(18):\n",
+    "for i in range(10):\n",
     "    control_device_device_id_control_post.sync(\n",
     "        field_id=i,\n",
     "        client=client,\n",
     "        body=ControlData(\n",
-    "            switchable=True, dimmable=50, color_rgb_with_fade=ColorRGBWithFadeData(fade_time=0.2,color=ColorRGBData(r=0,g=0,b=238))\n",
+    "            switchable=True, dimmable=50, color_rgb_with_fade=ColorRGBWithFadeData(fade_time=0.2,color=ColorRGBData(r=0.60,g=0.60,b=0))\n",
     "        ),\n",
     "    )"
    ]
@@ -214,10 +214,85 @@
     "        field_id=i,\n",
     "        client=client,\n",
     "        body=ControlData(\n",
-    "            switchable=True, dimmable=50, color_rgb=ColorRGBData(r=255*ra(), g=255*ra(), b=255*ra())\n",
+    "            switchable=True, dimmable=50, color_rgb=ColorRGBData(r=ra(), g=ra(), b=ra())\n",
     "        ),\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# One rack with RGB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dali_client.api.control import control_device_device_id_control_post\n",
+    "from dali_client.models.control_data import ControlData\n",
+    "from dali_client.models.color_rgb_data import ColorRGBData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "control_device_device_id_control_post.sync(\n",
+    "    field_id=8,\n",
+    "    client=client,\n",
+    "    body=ControlData(\n",
+    "        switchable=True, dimmable=100, color_rgb=ColorRGBData(r=0, g=255, b=0)\n",
+    "    ),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loop with XY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dali_client.api.control import control_device_device_id_control_post\n",
+    "from dali_client.models.control_data import ControlData\n",
+    "from dali_client.models.color_xy_with_fade_data import ColorXYWithFadeData\n",
+    "from dali_client.models.color_xy_data import ColorXYData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0,30,1):\n",
+    "    control_device_device_id_control_post.sync(\n",
+    "        field_id=i,\n",
+    "        client=client,\n",
+    "        body=ControlData(\n",
+    "            switchable=True, dimmable=50,color_rgb=ColorRGBData(r=0/255,g=25/255,b=255/255)\n",
+    "        ),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
